--- a/Compliance/COI.html
+++ b/Compliance/COI.html
@@ -120,24 +120,12 @@
 <div class="container-fluid">
   <div class="main-content">
     <div class="row dotted">
-      <div class="col-sm-12">
-      <h3>CITI Training Program</h3>
-        <p>The Collaborative Institutional Training Initiative (CITI Program) is dedicated to promoting the public’s trust in the research enterprise by providing high quality, peer-reviewed, web-based educational courses in research, ethics, regulatory oversight, responsible conduct of research, research administration, and other topics pertinent to the interests of member organizations and individual learners.</p>
-        <p>Please read the instructions and complete the online Conflict of Interest training course.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-sm-12">
-        <a href="https://www.citiprogram.org/Shibboleth.sso/Login?target=https%3A%2F%2Fwww.citiprogram.org%2FSecure%2FWelcome.cfm%3finst%3d429&entityID=urn:mace:incommon:virginia.edu"><h3 class="bbb">Online COI Training Course</h3></a>
-        <a href="../all-vpr-web/assets/CITI.TrainingInstructions.2017.pdf"><h3 class="bbb">Instructions</h3></a>
-      </div>
-    </div>
-    <div class="row dotted">
       <div class="col-sm-9">
         <h3>Financial Conflicts of Interest</h3>
         <p>If a researcher has a personal financial interest that may bias or appear to bias his research, he
 could have a research-related financial conflict of interest. Virginia law,
 federal research rules, and University policy define and regulate these conflicts. </p>
+        <li>The Financial COI form must be filled out every 12 months.</li>
         <a href="../all-vpr-web/assets/FAQs_to_coi.pdf"><h3 class="bbb">FAQ</h3></a>
         <a href="https://coi.sites.virginia.edu/"><h3 class="bbb">Online Disclosure System</h3></a>
         <a href="../all-vpr-web/assets/overcoming the rebuttable.doc"><h3 class="bbb">Human Subjects Research</h3></a>
@@ -153,8 +141,23 @@ federal research rules, and University policy define and regulate these conflict
         <p><a class="vpr-callout" href="../all-vpr-web/assets/ResearchNumbers2018.pdf">Download the PDF</a></p>
       </div>
     </div>
+    <div class="row dotted">
+      <div class="col-sm-12">
+      <h3>CITI Training Program</h3>
+        <p>The Collaborative Institutional Training Initiative (CITI Program) is dedicated to promoting the public’s trust in the research enterprise by providing high quality, peer-reviewed, web-based educational courses in research, ethics, regulatory oversight, responsible conduct of research, research administration, and other topics pertinent to the interests of member organizations and individual learners.</p>
+        <li>Please read the instructions and complete the online Conflict of Interest training course.</li>
+        <li>This training needs to be completed every 4 years.</li>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-sm-12">
+        <a href="https://www.citiprogram.org/Shibboleth.sso/Login?target=https%3A%2F%2Fwww.citiprogram.org%2FSecure%2FWelcome.cfm%3finst%3d429&entityID=urn:mace:incommon:virginia.edu"><h3 class="bbb">Online COI Training Course</h3></a>
+        <a href="../all-vpr-web/assets/CITI.TrainingInstructions.2017.pdf"><h3 class="bbb">Instructions</h3></a>
+      </div>
+    </div>
+    
     <div class="row centered dotted">
-      <h2>2016-2017 Conflict of Interest Committee</h2>
+      <h2>Conflict of Interest Committee</h2>
     </div><div class="row">
     <div class="col-sm-5">
       <h3>Voting Members</h3>
@@ -163,16 +166,16 @@ federal research rules, and University policy define and regulate these conflict
           <th>Name</th>
           <th>Representing</th>
         </tr>
-        <tr><td>Elizabeth Adams</td><td>OSP</td></tr>
         <tr><td>Catherine Bradshaw</td><td>Curry</td></tr>
         <tr><td>Stewart Craig</td><td>SOM</td></tr>
         <tr><td>Jerry Donowitz</td><td>SOM</td></tr>
+        <tr><td>Jean Eby</td><td>SOM, PBHS</td></tr>
         <tr><td>James Groves</td><td>SEAS</td></tr>
         <tr><td>David Hudson</td><td>VPR</td></tr>
         <tr><td>James Landers</td><td>SEAS</td></tr>
         <tr><td>Mimi Riley</td><td>LAW, Batten</td></tr>
-        <tr><td>Ann Taylor</td><td>SOM</td></tr>
-        <tr><td>Patti Tereskerz</td><td></td></tr>
+        <tr><td>Michael Straightiff</td><td>LVG</td></tr>
+        <tr><td>Patti Tereskerz</td><td>Chair</td></tr>
         <tr><td>Steve Wasserman</td><td>SOM</td></tr>
         <tr><td>Andy Wicks</td><td>Darden</td></tr>
       </table>
@@ -185,9 +188,8 @@ federal research rules, and University policy define and regulate these conflict
           <th>Name</th>
           <th>Representing</th>
         </tr>
-        <tr><td>Jean Eby</td><td>SOM, PBHS</td></tr>
         <tr><td>Beth Hodson</td><td>LC</td></tr>
-        <tr><td>Michael Straightiff</td><td>LVG</td></tr>
+        <tr><td>Rob Merhige</td><td>VPR</td></tr>
         <tr><td>Charlotta Wriston</td><td>SOM, Compliance</td></tr>
         <tr><td>Cheryl Wagner</td><td>VPR, Compliance</td></tr>
       </table>
