--- a/resources-for-researchers/index.html
+++ b/resources-for-researchers/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
-<html lang="en"><!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en">
+<!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -33,7 +34,7 @@
     <![endif]-->
 <!--    Access Analytics Script-->
 <script>var access_analytics={base_url:"https://analytics.ssbbartgroup.com/api/",instance_id:"AA-58bdcc11cee35"};(function(a,b,c){var d=a.createElement(b);a=a.getElementsByTagName(b)[0];d.src=c.base_url+"access.js?o="+c.instance_id+"&v=2";a.parentNode.insertBefore(d,a)})(document,"script",access_analytics);</script>
-  <!-- Global site tag (gtag.js) - Google Analytics -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-77273128-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -107,59 +108,19 @@
       <div class="main-content">
         <h2 class="vpr-page-title">Resources for Researchers</h2>
         <p>Below is a collection of links to help aid you in developing funding and infrastructure for your research.</p>
-        <!--
-        <a href="http://www.virginia.edu/vpr/centers/index.html">
-        <p >Institutes & Centers</p>
-        </a> <a href="http://www.vpit.virginia.edu/">
-        <p >IT & Computing Resources</p>
-        </a> <a href="research-development.html">
-        <p >Research Development</p>
-        </a> <a href="http://economicdevelopment.virginia.edu/">
-        <p >Strategic Corporate Partners</p>
-        </a> <a href="http://sif.virginia.edu/">
-        <p >Strategic Investment Fund</p>
-        </a> <a href="http://gradstudies.virginia.edu/">
-        <p >Graduate & Postdoctoral Affairs</p>
-        </a> <a href="faculty-onboarding.html">
-        <p >New Faculty On Boarding</p>
-        </a> <a href="http://uvapolicy.virginia.edu/">
-        <p >Policy Directory</p>
-        </a> 
-        
-        <ul>
-        <li><a href="http://www.virginia.edu/vpr/centers/index.html">
-        <p >Institutes & Centers</p>
-        </a></li> <li><a href="http://www.vpit.virginia.edu/">
-        <p >IT & Computing Resources</p>
-        </a></li> <li><a href="research-development.html">
-        <p >Research Development</p>
-        </a></li> <li><a href="http://economicdevelopment.virginia.edu/">
-        <p >Strategic Corporate Partners</p>
-        </a></li> <li><a href="http://sif.virginia.edu/">
-        <p >Strategic Investment Fund</p>
-        </a></li> <li><a href="http://gradstudies.virginia.edu/">
-        <p >Graduate & Postdoctoral Affairs</p>
-        </a></li> <li><a href="faculty-onboarding.html">
-        <p >New Faculty On Boarding</p>
-        </a></li> <li><a href="http://uvapolicy.virginia.edu/">
-        <p >Policy Directory</p>
-          </a></li>
-        </ul>
-
--->
-        
-        <ul>
-          <li><a href="../centers/index.html"> Institutes & Centers </a></li>
-          <li><a href="http://www.vpit.virginia.edu/"> IT & Computing Resources </a></li>
-          <li><a href="research-development.html"> Research Development </a></li>
-          <li><a href="http://economicdevelopment.virginia.edu/"> Strategic Corporate Partners </a></li>
-          <li><a href="http://sif.virginia.edu/"> Strategic Investment Fund </a></li>
-          <li><a href="http://gradstudies.virginia.edu/"> Graduate & Postdoctoral Affairs </a></li>
-          <li><a href="faculty-onboarding.html"> New Faculty Onboarding </a></li>
-          <li><a href="http://uvapolicy.virginia.edu/"> Policy Directory </a></li>
-          <li><a href="http://sponsoredprograms.virginia.edu/">Sponsored Programs</a></li>
-          <li><a href="../Compliance/index.html">Research Compliance</a></li>
-        </ul>
+            <ul>
+              <li><a href="../centers/index.html"> Institutes & Centers </a></li>
+              <li><a href="http://www.vpit.virginia.edu/"> IT & Computing Resources </a></li>
+              <li><a href="research-development.html"> Research Development </a></li>
+              <li><a href="http://economicdevelopment.virginia.edu/"> Strategic Corporate Partners </a></li>
+              <li><a href="http://sif.virginia.edu/"> Strategic Investment Fund </a></li>
+              <li><a href="http://gradstudies.virginia.edu/"> Graduate & Postdoctoral Affairs </a></li>
+              <li><a href="faculty-onboarding.html"> New Faculty Onboarding </a></li>
+              <li><a href="http://uvapolicy.virginia.edu/"> Policy Directory </a></li>
+              <li><a href="http://sponsoredprograms.virginia.edu/">Sponsored Programs</a></li>
+              <li><a href="../Compliance/index.html">Research Compliance</a></li>
+              <li><a href="../all-vpr-web/assets/UVA-FA-Cost-flyer.pdf">Explanation of Facilities & Admin Costs</a></li>
+            </ul>
       </div>
       <!-- InstanceEndEditable --></div>
   </div>
@@ -204,7 +165,7 @@
     </div>
   </div>
 </div>
-  <div class="container-fluid">
+<div class="container-fluid">
   <div class="row dotted">
     <div class="col-sm-8 col-sm-offset-1"> <img src="../all-vpr-web/img/fundingsign.png" width="500" height="300" alt="Resilience Forum"/> </div>
     <div class="col-sm-3 vpr-callout">
@@ -270,8 +231,7 @@
         <div class="description">
           <p class="description_content">Sponsored Programs</p>
         </div>
-        </a>
-      </div>
+        </a> </div>
     </div>
   </div>
 </div>
@@ -333,4 +293,5 @@
   </div>
 </footer>
 </body>
-<!-- InstanceEnd --></html>
+<!-- InstanceEnd -->
+</html>
