--- a/Research Development/index.html
+++ b/Research Development/index.html
@@ -6,6 +6,14 @@
 <link href="../all-vpr-web/dist/css/loader.css" type="text/css" rel="stylesheet"> 
 <meta http-equiv="refresh" content="1;URL=http://www.virginia.edu/vpr/resources-for-researchers/research-development.html">
 <meta name="keywords" content="automatic redirection">
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-77273128-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-77273128-1');
+</script>
 </head>
 
 <body>
