Update menu to be editable

--- a/ControlledSubstances/index.html
+++ b/ControlledSubstances/index.html
@@ -9,8 +9,8 @@
 <meta name="author" content="IT Services, Office of the VP for Research">
 <link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-	<title>Anjula Joseph</title>
-	<!-- InstanceEndEditable -->
+<title>Office of the Vice President for Research</title>
+<!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
 	<script>try{Typekit.load();}catch(e){}</script>
@@ -43,7 +43,7 @@
   gtag('config', 'UA-77273128-1');
 </script>
 <!-- InstanceBeginEditable name="head" -->
-    <!-- InstanceEndEditable -->
+<!-- InstanceEndEditable -->
 </head>
 
 <body>
@@ -87,44 +87,72 @@
         <ul class="sidebar-nav">
           <!-- InstanceBeginEditable name="SideNav" -->
             <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../contact.html">Contact & Directions</a></h2>
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../all-vpr-web/assets/UVA-Use-of-Controlled-Substances-in-Research-Manual.docx">Manual</a></h2>
             </li>
             <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../leadership.html">Leadership</a></h2>
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="http://www.virginia.edu/vpr/ControlledSubstances/forms.html">Forms & Logs</a></h2>
             </li>
             <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../staff.html">Staff</a></h2>
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="http://www.virginia.edu/vpr/ControlledSubstances/regulations.html">Regulations</a></h2>
             </li>
             <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../news.html">News</a></h2>
-            </li>
-            <li class="nav-item">
-              <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></h2>
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="http://www.virginia.edu/vpr/ControlledSubstances/applications.html">Applications</a></h2>
             </li>
           <!-- InstanceEndEditable -->
         </ul>
       </div>
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
-		  <div class="main-content">
-		    <h2 class="vpr-page-title">Anjula Joseph</h2>
-		    <div class="row">
-				<div class="col-sm-12">
-					<img class="headshot" src="../all-vpr-web/img/Joseph.Anjula2016.jpg" alt="Joseph">
-					<p>Anjula Joseph is the Senior Director of Finance at the Office of the Vice President for Research (VPR). In this role, Anjula oversees finance activity of VPR units and initiatives, including the Office of Environmental Health and Safety, the Office of Graduate Studies and Postdoctoral Affairs, the Center for Comparative Medicine, UVA Research Compliance and the Virginia Quarterly Review, and she spearheads the VPR budget development process. She advises the Vice President on resource allocation and administrative matters, leads and oversees select VPR funding programs , and allocates and oversees VPR strategic investments which aim to enhance academic excellence in collaboration with Schools by creating, catalyzing and nurturing early-stage, collaborative, high-value, cross-school, multi-disciplinary, as well as school-specific, research, scholarship and innovation opportunities, and by providing service to school and non-school units. Anjula is the primary liaison between VPR and the University on financial matters, and she represents VPR on Institutional financial and administrative committees.</p>
-		    		<p>Prior to joining VPR, Anjula served as the Assistant Director of Programs at the Darden School’s Batten Institute for Entrepreneurship and Innovation, and as Senior Budget Analyst and Budget Manager at the University Budget Office. Prior to joining the University of Virginia, Anjula held the role of Senior Accounting Analyst at SNL Financial, where she covered over 80 companies in the financial services industry. Anjula earned her BBA degree in Finance from James Madison University and her MBA degree from the University of Richmond.</p>
-			  </div>
-		    </div>
-		    
-		    <p>Anjula Joseph is the Senior Director of Finance at the Office of the Vice President for Research (VPR). In this role, Anjula oversees finance activity of VPR units and initiatives, including the Office of Environmental Health and Safety, the Office of Graduate Studies and Postdoctoral Affairs, the Center for Comparative Medicine, UVA Research Compliance and the Virginia Quarterly Review, and she spearheads the VPR budget development process. She advises the Vice President on resource allocation and administrative matters, leads and oversees select VPR funding programs , and allocates and oversees VPR strategic investments which aim to enhance academic excellence in collaboration with Schools by creating, catalyzing and nurturing early-stage, collaborative, high-value, cross-school, multi-disciplinary, as well as school-specific, research, scholarship and innovation opportunities, and by providing service to school and non-school units. Anjula is the primary liaison between VPR and the University on financial matters, and she represents VPR on Institutional financial and administrative committees.</p>
-		    <p>Prior to joining VPR, Anjula served as the Assistant Director of Programs at the Darden School’s Batten Institute for Entrepreneurship and Innovation, and as Senior Budget Analyst and Budget Manager at the University Budget Office. Prior to joining the University of Virginia, Anjula held the role of Senior Accounting Analyst at SNL Financial, where she covered over 80 companies in the financial services industry. Anjula earned her BBA degree in Finance from James Madison University and her MBA degree from the University of Richmond.</p>
-	    </div>
-		<!-- InstanceEndEditable --></div>
+      <div class="main-content">
+        <h2 class="vpr-page-title">Controlled Substances</h2>
+        <img src="../all-vpr-web/img/controlledsubstance.jpg" alt="Controlled Substances Image" style="max-height: 315px"/>
+      </div>
+      <!-- InstanceEndEditable --></div>
   </div>
 </div>
 <!-- InstanceBeginEditable name="CenterContent" -->
-<!--Begin: UVA Brand Template - Main Content -->
-<!--End: UVA Brand Template - Main Content -->
+<div class="container-fluid">
+  <div class="main-content">
+    <div class="row dotted"> 
+      <div class="col">
+        <h4>The University is changing the manner in which Controlled Substances are procured and used in research involving animal models and in vitro experiments.</h4>
+        <p>The Drug Enforcement Administration (DEA) and Virginia Board of Pharmacy (VBP) require that all locations which store Controlled Substances (CS) for use in research must be registered with both the DEA and VBP, and adhere to the other regulations regarding procurement, record keeping, administration (to animals or in vitro), and destruction.</p>
+
+        <p>The UVA research community has until February 2018, to fully comply with the crucial state and federal regulations governing the use of Controlled Substances. The UVA Center for Comparative Medicine (CCM) maintains a Wholesale Distributers Registration, and after February 2018, they will only be permitted to dispense Controlled Substances to members of the research community that hold both the required DEA Registration and VBP Registration Certificate.</p>
+
+        <p>The Office of the Vice President for Research has produced an instructional manual for the UVA research community which provides guidance in the crucial aspects of the application process, procurement, storage, use and destruction of Controlled Substances.</p>
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container-fluid">
+  <div class="row dotted">
+    <div class="col-sm-8 vpr-callout">
+      <h3 class="vpr-callout">Contact Us</h3>
+      <div class="col-sm-6">
+        <div class="bold">Sanford Feldman</div>
+        <div>Director, Comparative Medicine</div>
+        <div>434.924.5058</div>
+        <div>shf2b@virginia.edu</div>
+      </div>
+      <div class="col-sm-6">
+        <div class="bold">Angela Gamble</div>
+        <div>Director, Office of Animal Welfare</div>
+        <div>434.924.5752</div>
+        <div>adr8s@virginia.edu</div>
+      </div>
+    </div>
+    <div class="col-sm-4 vpr-callout">
+      <h3 class="vpr-callout">By the Numbers</h3>
+      <ul>
+        <li> Federal Funding: <em>$260m</em> </li>
+        <li> Total Research: <em>$338m</em> </li>
+      </ul>
+      <p>UVa’s total research funding $338 million, of which $260 million is federal research dollars.</p>
+      <p><a class="vpr-callout" href="../all-vpr-web/assets/ResearchNumbers2018.pdf">Download the PDF</a></p>
+    </div>
+  </div>
+</div>
 <!-- InstanceEndEditable -->
 <div class="container-fluid dotted">
   <div class="row">
