--- a/projects-and-initiatives.html
+++ b/projects-and-initiatives.html
@@ -85,21 +85,23 @@
       </div>
       <div class="nav">
         <ul class="sidebar-nav">
-          <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="contact.html">Contact & Directions</a> </h2>
-          </li>
-          <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="leadership.html">Leadership</a> </h2>
-          </li>
-          <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="staff.html">Staff</a> </h2>
-          </li>
-          <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="news.html">News</a> </h2>
-          </li>
-          <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a> </h2>
-          </li>
+          <!-- InstanceBeginEditable name="SideNav" -->
+            <li class="nav-item">
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="contact.html">Contact & Directions</a></h2>
+            </li>
+            <li class="nav-item">
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="leadership.html">Leadership</a></h2>
+            </li>
+            <li class="nav-item">
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="staff.html">Staff</a></h2>
+            </li>
+            <li class="nav-item">
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="news.html">News</a></h2>
+            </li>
+            <li class="nav-item">
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></h2>
+            </li>
+          <!-- InstanceEndEditable -->
         </ul>
       </div>
     </div>
