--- a/resources-for-researchers/index.html
+++ b/resources-for-researchers/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html lang="en">
-<!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
+<html lang="en"><!-- InstanceBegin template="/Templates/home-template.dwt" codeOutsideHTMLIsLocked="false" -->
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -34,7 +33,7 @@
     <![endif]-->
 <!--    Access Analytics Script-->
 <script>var access_analytics={base_url:"https://analytics.ssbbartgroup.com/api/",instance_id:"AA-58bdcc11cee35"};(function(a,b,c){var d=a.createElement(b);a=a.getElementsByTagName(b)[0];d.src=c.base_url+"access.js?o="+c.instance_id+"&v=2";a.parentNode.insertBefore(d,a)})(document,"script",access_analytics);</script>
-<!-- Global site tag (gtag.js) - Google Analytics -->
+  <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-77273128-1"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
@@ -86,21 +85,23 @@
       </div>
       <div class="nav">
         <ul class="sidebar-nav">
-          <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../contact.html">Contact & Directions</a> </h2>
-          </li>
-          <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../leadership.html">Leadership</a> </h2>
-          </li>
-          <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../staff.html">Staff</a> </h2>
-          </li>
-          <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="../news.html">News</a> </h2>
-          </li>
-          <li class="nav-item">
-            <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a> </h2>
-          </li>
+          <!-- InstanceBeginEditable name="SideNav" -->
+            <li class="nav-item">
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../contact.html">Contact & Directions</a></h2>
+            </li>
+            <li class="nav-item">
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../leadership.html">Leadership</a></h2>
+            </li>
+            <li class="nav-item">
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../staff.html">Staff</a></h2>
+            </li>
+            <li class="nav-item">
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="../news.html">News</a></h2>
+            </li>
+            <li class="nav-item">
+              <h2 class="sidebar-nav-item"> <a class="nav-item" href="https://securelb.imodules.com/s/1535/16-uva/index.aspx?sid=1535&gid=16&pgid=684&cid=1509&dids=1161.1162.1163&bledit=1">Give</a></h2>
+            </li>
+          <!-- InstanceEndEditable -->
         </ul>
       </div>
     </div>
@@ -293,5 +294,4 @@
   </div>
 </footer>
 </body>
-<!-- InstanceEnd -->
-</html>
+<!-- InstanceEnd --></html>
