Controlled Substances - forms regulations and applications

--- a/3Cavaliers/faq.html
+++ b/3Cavaliers/faq.html
@@ -140,6 +140,8 @@
 				<p>Faculty members can create project descriptions, search for collaborators and projects, and obtain research funding for their trio.</p>
 				<h3 class="section-heading">How do I find partners</h3>
 				<p>The 3C website has a UVA faculty database. You can search to easily find possible collaborators.</p>
+				<h3 class="section-heading">Does my project qualify for 3C funding?</h3>
+				<p>The project must be <strong>New</strong> research. This cannot be a continuation of a project you have already started. It cannot be used to extend current projects or as a source of funding to continue a project that has been previously funded. </p>
 				<h3 class="section-heading">If I have previously published papers with two other faculty members, and want to now form a trio, is that allowed?</h3>
 				<p>As long as the project is new, innovative research, and you have not worked on the same external grant, that is fine.</p>
 				<h3 class="section-heading">I have a grant with one faculty member and a different grant with a second faculty member.  I want to form a trio with these two people on a totally new research project.  Can I do that?</h3>
