--- a/ControlledSubstances/applications.html
+++ b/ControlledSubstances/applications.html
@@ -10,7 +10,7 @@
 <meta name="author" content="IT Services, Office of the VP for Research">
 <link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Office of the Vice President for Research</title>
+<title>Controlled Substances Application & Renewal Process - Office of the Vice President for Research - UVA</title>
 <!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
@@ -105,9 +105,20 @@
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
       <div class="main-content">
-        <h2 class="vpr-page-title">Forms & Logs</h2>
-        <p>Working with Controlled Substances requires specific procedures and documentation practices in accordance with federal and state regulations.  Three categories of documents must be maintained:  records associated with the application process; records of Authorized Users; and records of use.</p>
-        <p> The usage documentation must demonstrate a closed system of distribution wherein each Controlled Substance is accounted for from acquisition through to use and disposal (or destruction) and the chain of custody and usage must be documented.   Typical categories include:  acquisition (ordering or purchasing), receiving, administration (use), inventory, and disposal. </p>
+        <h2 class="vpr-page-title">Application & Renewal Process</h2>
+        <h3>Where to Register?</h3>
+        <div class="row">
+          <div class="col-sm-5">
+            <h4>Schedules I - V</h4>
+            <p>Requires both a DEA Registration and VBP Controlled Substance Registration (CSR) Certificate</p>
+          </div>
+          <div class="col-sm-2"></div>
+          <div class="col-sm-5">
+            <h4>Schedule 4 Only</h4>
+            <p>VBP Controlled Substance Registration (CSR) Certificate</p>
+          </div>
+        </div>
+        <p>Obtaining a DEA Registration and VBP Registration Certificate requires an initial scheduled on-site inspection by an auditor from the VBP and possibly DEA. The VBP auditor has requested that as many inspections be scheduled together as possible for the sake of expediency.</p>
       </div>
       <!-- InstanceEndEditable --></div>
   </div>
@@ -116,33 +127,41 @@
 <div class="container-fluid">
   <div class="main-content">
     <div class="row dotted">
-      <p>The Using Controlled Substances in Research at the University of Virginia manual refers to the sample forms below.  The use of these forms is not required; however, the templates incorporate all of the required elements from the applicable regulations.  Any format used must meet the requirements of all pertinent regulations.  Registrants should determine a consistent documentation process to ensure best compliance practices. </p>
-      <p> Authorized User records must be kept for two years.  Usage records must be maintained for two (2) years after the depletion or destruction of the Controlled Substance. </p>
-      <h3>Application Process and Personnel forms:</h3>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/VBP Application.UVA Sample.doc">Example Application forms for VBP</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/DEA Application Form 225 - UVA with signature.pdf">Example Application forms for DEA</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/UVA Controlled Substance Research Protocol form.docx">University of Virginia Controlled Substances Research Protocol</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/Personnel Screening form.docx">Controlled Substances Personnel Screening form</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/AU Signature log for Schedule 1.docx">Authorized Users Signature Log for Schedule I CS</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/AU Signature log for Schedule 2-6.docx">Authorized Users Signature Log for Schedule II-VI SC</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/DEA and VBP Laboratory Inspection Checklist.docx">DEA and VBP Laboratory Inspection Checklist</a></p>
-    </div>
+      <h3>New DEA Registrations</h3>
+      <h4>Federal Controlled Substance Application</h4>
+      <p>Signature from Procurement is embedded in this form and is required for tax exempt status.</p>
+      <p>Fees: DEA Registration application and renewal fees are waived for tax exempt institutions. Use the DEA Form 225 embedded with the signature from Procurement to document tax exempt status</p>
+      <a href="https://www.procurement.virginia.edu/netbadge/forms/225_form.pdf">
+      <h3 class="bbb">DEA Form 225</h3>
+      </a> <a href="https://apps.deadiversion.usdoj.gov/webforms/jsp/regapps/common/newAppLogin.jsp">
+      <h3 class="bbb">Application Instructions</h3>
+      </a> </div>
     <div class="row dotted">
-      <h3>Recordkeeping forms and logs</h3>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/Inventory Form.docx">CS Inventory form</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/Usage and Disposal Log Form.docx">CS Usage and Disposal Log form</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/DEA Paper Form 41 - Destruction through Reverse Distributor.pdf">DEA Form 41 - Reverse Distribution Certification of Transfer and Destruction form</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/CCM Certification of Transfer for Reverse Distribution and Distruction form.docx">CCM Certification of Transfer for Reverse Distribution/Destruction form</a></p>
-    </div>
+      <h3>New VBP Registration</h3>
+      <h4>Federal Controlled Substance Application</h4>
+      <p>Signature from Procurement is embedded in this form and is required for tax exempt status.</p>
+      <p>Fees: DEA Registration application and renewal fees are waived for tax exempt institutions. Use the DEA Form 225 embedded with the signature from Procurement to document tax exempt status</p>
+      <a href="https://www.dhp.virginia.gov/pharmacy/pharmacy_forms.htm#csr">
+      <h3 class="bbb">Virginia Board Registration Application</h3>
+      </a> <a href="../all-vpr-web/assets/VBP Application.UVA Sample.doc">
+      <h3 class="bbb">Example Application</h3>
+      </a>
+      <p>Fees: The cost associated with the VBP Registration cannot be waived (~$90).</p>
+      <p>Pay the initial application fee with a personal check and get reimbursed through Expense UVA. Supplier/Vendor #10867.</p>
+      <p>Fee can be paid using Departmental funds, non-federal funds, or personal funds. Federal grants CANNOT be used to pay registration fees.</p>
+      <img src="../all-vpr-web/img/Registration ProcessDiagram.jpg" alt="registration process diagram"/> </div>
+    <div class="row dotted">
+      <h3>How do I renew my Registrations?</h3>
+      <h4>DEA registrations are renewed biennially in February</h4>
+      <a href="https://www.deadiversion.usdoj.gov/drugreg/index.html">
+      <h3 class="bbb">DEA Renewal Instructions</h3>
+      </a><a href="https://apps.deadiversion.usdoj.gov/webforms/jsp/regapps/common/renewalAppLogin.jsp">
+      <h3 class="bbb">DEA Renewal Application</h3>
+      </a>
+      <h4>VBP registration is renewed annually</h4>
+      <a href="http://www.dhp.virginia.gov/mylicense/renewalintro.asp">
+      <h3 class="bbb">VBP Renewal Instructions</h3>
+      </a> </div>
   </div>
 </div>
 <div class="container-fluid">
