--- a/ControlledSubstances/regulations.html
+++ b/ControlledSubstances/regulations.html
@@ -10,7 +10,7 @@
 <meta name="author" content="IT Services, Office of the VP for Research">
 <link rel="icon" href="../all-vpr-web/img/favicon.ico">
 <!-- InstanceBeginEditable name="doctitle" -->
-<title>Office of the Vice President for Research</title>
+<title>Controlled Substances Regulations - UVA Vice President for Research</title>
 <!-- InstanceEndEditable -->
 <!--
 	<script src="//use.typekit.net/tgy5tlj.js"></script>
@@ -105,9 +105,8 @@
     </div>
     <div class="col-sm-8"><!-- InstanceBeginEditable name="PageTitleTop" -->
       <div class="main-content">
-        <h2 class="vpr-page-title">Forms & Logs</h2>
-        <p>Working with Controlled Substances requires specific procedures and documentation practices in accordance with federal and state regulations.  Three categories of documents must be maintained:  records associated with the application process; records of Authorized Users; and records of use.</p>
-        <p> The usage documentation must demonstrate a closed system of distribution wherein each Controlled Substance is accounted for from acquisition through to use and disposal (or destruction) and the chain of custody and usage must be documented.   Typical categories include:  acquisition (ordering or purchasing), receiving, administration (use), inventory, and disposal. </p>
+        <h2 class="vpr-page-title">Regulations</h2>
+        <p>The Drug Enforcement Administration (DEA) and Virginia Board of Pharmacy (VBP) regulate the use of Controlled Substances in basic and applied research settings whether the use is in vitro, or for pharmaceuticals administered to animal models. The intent of the regulations is to maintain a closed system of distribution wherein a Controlled Substance is tracked from its acquisition through to use and/or disposal through a single chain of custody.</p>
       </div>
       <!-- InstanceEndEditable --></div>
   </div>
@@ -116,32 +115,21 @@
 <div class="container-fluid">
   <div class="main-content">
     <div class="row dotted">
-      <p>The Using Controlled Substances in Research at the University of Virginia manual refers to the sample forms below.  The use of these forms is not required; however, the templates incorporate all of the required elements from the applicable regulations.  Any format used must meet the requirements of all pertinent regulations.  Registrants should determine a consistent documentation process to ensure best compliance practices. </p>
-      <p> Authorized User records must be kept for two years.  Usage records must be maintained for two (2) years after the depletion or destruction of the Controlled Substance. </p>
-      <h3>Application Process and Personnel forms:</h3>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/VBP Application.UVA Sample.doc">Example Application forms for VBP</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/DEA Application Form 225 - UVA with signature.pdf">Example Application forms for DEA</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/UVA Controlled Substance Research Protocol form.docx">University of Virginia Controlled Substances Research Protocol</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/Personnel Screening form.docx">Controlled Substances Personnel Screening form</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/AU Signature log for Schedule 1.docx">Authorized Users Signature Log for Schedule I CS</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/AU Signature log for Schedule 2-6.docx">Authorized Users Signature Log for Schedule II-VI SC</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/DEA and VBP Laboratory Inspection Checklist.docx">DEA and VBP Laboratory Inspection Checklist</a></p>
+      <div class="col-sm-8">
+        <h2>Regulatory Oversight Links</h2>
+        <p><a href="https://www.deadiversion.usdoj.gov/index.html"><strong>Drug Enforcement Administration (DEA), Office of Diversion Control</strong></a> </p>
+        <p><a href="https://www.deadiversion.usdoj.gov/21cfr/cfr/index.html">Code of Federal Regulations, 21 CFR 1300-1399</a></p>
+        <p><a href="http://www.dhp.virginia.gov/Pharmacy/default.htm"><strong>Virginia Board of Pharmacy</strong></a></p>
+        <p><a href="http://www.dhp.virginia.gov/Pharmacy/pharmacy_laws_regs.htm ">VBP Laws and Regulations</a></p>
+        <p><a href="https://www.deadiversion.usdoj.gov/schedules/orangebook/c_cs_alpha.pdf">DEA Controlled Substance Code Numbers (Alphabetical Order) - (orange book)</a></p>
+        <p><a href="https://www.deadiversion.usdoj.gov/schedules/index.html">Controlled Substance Schedules</a><br>
+        </p>
+        <p><a href="../all-vpr-web/assets/Registration ProcessDiagram.pdf">Registration Process Diagram</a></p>
+      </div>
+      <div class="col-sm-4"> <img src="../all-vpr-web/img/circleclosedloop.png" alt="regulation cycle at uva"/> </div>
     </div>
     <div class="row dotted">
-      <h3>Recordkeeping forms and logs</h3>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/Inventory Form.docx">CS Inventory form</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/Usage and Disposal Log Form.docx">CS Usage and Disposal Log form</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/DEA Paper Form 41 - Destruction through Reverse Distributor.pdf">DEA Form 41 - Reverse Distribution Certification of Transfer and Destruction form</a><br>
-      </p>
-      <p><a href="http://www.virginia.edu/vpr/all-vpr-web/assets/CCM Certification of Transfer for Reverse Distribution and Distruction form.docx">CCM Certification of Transfer for Reverse Distribution/Destruction form</a></p>
+      <p><a href="../images/Schedules diagram.jpg"><img src="../all-vpr-web/img/Schedules diagram.jpg" alt="steps"></a> </p>
     </div>
   </div>
 </div>
