htaccess fixes - Compliance Training added, internal funding added - deleted the Resaerch Development

--- a/resources-for-researchers/research-development.html
+++ b/resources-for-researchers/research-development.html
@@ -122,7 +122,7 @@
         <div class="description">
           <p class="description_content">External Funding</p>
         </div>
-        </a> <a href="http://www.virginia.edu/vpr/Research%20Development/internalfund.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0015_Bookstore_TexturalSS_24.jpg.jpg">
+        </a> <a href="internalfund.html" class="wrapper zoom-in"> <img src="../all-vpr-web/img/brand/sized-3-2/sponsored_research_2017_0015_Bookstore_TexturalSS_24.jpg.jpg">
         <div class="description">
           <p class="description_content">Internal Funding</p>
         </div>
